@@ -4,4 +4,4 @@
 oe_setup_addon service.radarr
 
 nice -n "$rr_nice" \
-mono "$ADDON_DIR/Radarr/Radarr.exe" -data="$ADDON_HOME" -nobrowser
+mono "$ADDON_DIR/radarr/Radarr.exe" -data="$ADDON_HOME" -nobrowser
